--- a/css/global.css
+++ b/css/global.css
@@ -47,11 +47,6 @@
 	color:#969696;
 }
 
-#customerContainer .dropdown-menu
-{
-/*	margin-top:32px;
-*/}
-
 #connexionButtonDiv
 {
 	position: relative;
@@ -87,4 +82,62 @@
 	text-decoration: none;
 	font-size: 11px;
 	color: black;
+}
+
+#bannerContainer
+{
+	margin:10px 5px;
+	height:220px;
+	background-color: red;
+}
+
+.imagesContainer
+{
+	margin:10px 5px;
+	height:220px;
+}
+
+.imagesContainer img
+{
+	height:210px;
+	width:100%;
+	border-radius: 10px;
+	opacity: 1;
+}
+
+.curtain
+{
+	height:210px;
+	width:100%;
+	background-color: black;
+	opacity: 1;
+	border-radius: 10px;
+}
+
+.curtain a
+{
+	color:white;
+	text-decoration: none;
+}
+
+.curtain p
+{
+	position:relative;
+	top:-185px;
+	color:white;
+	width:100%;
+	text-align: center;
+	display:none;
+	font-size:15px;
+	padding:60px 30px;
+}
+
+li.dropdown-toggle
+{
+	cursor:pointer;
+}
+
+#connectionContainer input, #createAccount input, #createAccount textarea
+{
+	margin-bottom: 5px;
 }
