--- a/css/global.css
+++ b/css/global.css
@@ -155,5 +155,9 @@ li.dropdown-toggle
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
 }
 
-
+ul.dropdown-menu
+{
+    margin-right: 75px;
+    margin-top: 0px;
+}
 
