dynamic customer table content

--- a/css/global.css
+++ b/css/global.css
@@ -161,7 +161,8 @@ ul.dropdown-menu
     margin-top: 0px;
 }
 
-#customersTable td
+#customersTable td,#customersTable input,#customersTable select
 {
 	font-size: small;
 }
+
