--- a/css/global.css
+++ b/css/global.css
@@ -177,3 +177,59 @@ form input,form textarea
 	margin-top: -5px;
     margin-left: 5px;
 }
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+    font-size: 13px;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+#importProducts,#deleteMyAccount,#confirmPasswordUpdateButton,#changePassword
+{
+	color:#A90000;	
+}
+
+#passwordContainer,#deleteMyAccountContainer
+{
+	text-align:center;
+	padding:5px 5px;
+	border-radius: 10px;
+	box-shadow: 3px 4px 10px #888888;
+	margin-bottom: 10px;
+}
+
+#myAccountDisplayContainer
+{
+	padding:10px 10px;
+}
+
+#buttonsContainer
+{
+	float: right;
+}
+
+#importedFile
+{
+	margin-right: 5px;
+	font-size: 13px
+}
+
+#errormessage
+{
+	color:red;
+}
