--- a/css/global.css
+++ b/css/global.css
@@ -501,3 +501,16 @@ button
 {
 	margin-top: 0;
 }*/
+
+.connectionLink
+{
+	height: 20px;
+    margin-top: -8px;
+}
+
+.userIcon
+{
+	position: relative;
+	top: 8px;
+	color:#EEE;
+}
